--- a/post.hbs
+++ b/post.hbs
@@ -7,6 +7,10 @@
 
     <div class="post-content">{{ content }}</div>
 
+    <section class="meta">
+        {{tags prefix="Tags: "}}
+    </section>
+
     <p class="meta">Posted on <span class="postdate">{{date format="MMM Do, YYYY"}}</span></p>
 
 </article>
